# GraphSh

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Canvas.h  Color.h  CommandInterface.h  CommandParser.h
src/: Canvas.cpp  Color.cpp  CommandInterface.cpp  CommandParser.cpp  main.cpp
